Fixed a bug in which text-logo class - 1. on bigger screen the logo shou be on left side of text and on smaller screen the logo shoud be on right side of text.

--- a/CSS/Common.css
+++ b/CSS/Common.css
@@ -1,3 +1,5 @@
+/* common.css */
+
 body {
     background-color: #f8f9fa;
 }
@@ -7,16 +9,34 @@ body {
     color: white;
     padding: 8px 0;
 }
-.navbar-brand{
-    height: 50px;
+
+.logo-text-container {
+    display: flex;
+    align-items: center;
 }
 
-.navbar-brand img{
-    height: 125%;
+.navbar-brand {
+    height: 50px;
+    padding-right: 10px;
+}
+
+.navbar-brand img {
+    height: 150%;
+    padding-bottom: 10px;
+}
+
+#text {
+    color: white;
+    font-size: larger;
+    white-space: nowrap;
 }
 
 .nav-link {
     color: white !important;
+}
+
+.navbar {
+    justify-content: space-between;
 }
 
 .sidebar {
@@ -61,28 +81,47 @@ body {
     padding: 10px 15px;
     border: none;
     display: none;
-    /* Hide by default */
 }
 
 .openbtn:hover {
     background-color: #444;
 }
 
-/* Show the menu button on smaller screens */
 @media screen and (max-width: 980px) {
     .openbtn {
         display: block;
+        margin-right: 20px;
     }
 
     .navbar-nav {
         display: none;
-        /* Hide the navbar links */
+    }
+
+    .logo-text-container {
+        margin-left: auto;
+        flex-direction: row-reverse;
+    }
+
+    .navbar-brand {
+        padding-right: 0;
+        padding-left: 10px;
     }
 }
 
 @media screen and (min-width: 981px) {
     .navbar-nav {
         display: flex !important;
-        /* Show the navbar links */
+    }
+
+    .openbtn {
+        display: none;
+    }
+
+    .logo-text-container {
+        margin-right: auto;
+    }
+
+    .navbar-collapse {
+        margin-left: 20px;
     }
 }
